# FPGA_Driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.yaml
include/: NiFpga_FPGA_RS485_v1_2.h  can_packet.h  console.hpp  fpga_handler.hpp  fpga_server.hpp  fsm.hpp  leg_module.hpp  msg.hpp
install/include/: Motor.grpc.pb.h  Motor.pb.h  Motor.proto  Power.grpc.pb.h  Power.pb.h  Power.proto  connection.grpc.pb.h  connection.pb.h  registration.grpc.pb.h  registration.pb.h  serviceserving.grpc.pb.h  serviceserving.pb.h  std.grpc.pb.h  std.pb.h
install/lib/: libz.so.1.3.1.1-motley
install/lib/cmake/grpc/: gRPCTargets.cmake
install/lib/cmake/protobuf/: protobuf-targets.cmake
install/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_bounded_utf8_length_sequence.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  (+164 more)
install/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake
install/share/pkgconfig/: eigen3.pc  zlib.pc
kilin_fpga_driver/: CMakeLists.txt
kilin_fpga_driver/config/: config.yaml
kilin_fpga_driver/include/: NiFpga_FPGA_RS485_v1_2.h  NiFpga_RS485_v2.h  console.hpp  fpga_handler.hpp  fpga_server.hpp  fsm.hpp  leg_module.hpp  mode.hpp  msg.hpp  packet.hpp
kilin_fpga_driver/src/: CMakeLists.txt  console.cpp  fpga_handler.cpp  fpga_server.cpp  fsm.cpp  leg_module.cpp
src/: CMakeLists.txt  NiFpga_FPGA_RS485_v1_2.c  fpga_handler.cpp  fpga_server.cpp  leg_module.cpp  main.cpp
